# pico-sdf

./: README.md  pico.py  pico.sh  pico_env.sh
stdproj/: CMakeLists.txt  main.c
stdproj/lib/: CMakeLists.txt
stdproj/lib/comlib/: CMakeLists.txt  comlib.h  config.h
stdproj/lib/logger/: CMakeLists.txt  colors.h  logger.c  logger.h
